test/compile-fail/scope/multiple-definition-struct-use/top.rhdl
struct a {}
mod b {
    pub enum a {}
}
use b::a;
